civo-gitlab/templates/ai-cluster/ingress-for-ai/ollama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <WORKLOAD_CLUSTER_NAME>-ollama-http-ingress
  namespace: openwebui
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              name: http
    host: ollama.<DOMAIN_NAME>
  tls:
  - hosts:
    - ollama.<DOMAIN_NAME>
    secretName: <WORKLOAD_CLUSTER_NAME>-ollama-http-ingress
